--- a/soon.html
+++ b/soon.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.cs">
+    <link rel="stylesheet" href="style.css">
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;600;700&display=swap');
@@ -47,7 +47,7 @@ input, button{
 
 
 div{
-    width: 80%;
+    width: 85%;
     margin: 0px auto;
     margin-top: 0px;
     padding: 0px;
@@ -136,6 +136,7 @@ img {
     border: 1px solid #FFD36A;
     border-radius: 360px;
     }
+
 
 </style>
 </head>
