--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@ document.write(unescape('%3c%6c%69%6e%6b%20%72%65%6c%3d%22%73%74%79%6c%65%73%68%
                         <li class="contact-item">
 
             <div class="icon-box">
-              <ion-icon name="bag"></ion-icon>
+              <ion-icon name="dollar"></ion-icon>
             </div>
 
             <div class="contact-info">
 
 
-              <a href="soon" class="contact-link">Plan</a>
+              <a href="vip-page" class="contact-link">Vip</a>
             </div>
            
              <li class="contact-item">
