--- a/vip-page.html
+++ b/vip-page.html
@@ -52,6 +52,7 @@ div{
     margin: 0px auto;
     margin-top: 0px;
     padding: 0px;
+    border: 1px solid #FFD36A;
     
 }
 
@@ -75,6 +76,7 @@ display: block;
 div h3{
     text-align: center;
     font-family:  'Oswald', sans-serif;
+
 }
 
 
