--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ document.write(unescape('%3c%6c%69%6e%6b%20%72%65%6c%3d%22%73%74%79%6c%65%73%68%
             <div class="contact-info">
         
 
-              <a href="userprofile.html" class="contact-link">MyProfile</a>
+              <a href="userprofile" class="contact-link">MyProfile</a>
             </div>
 
           </li>
@@ -166,7 +166,7 @@ document.write(unescape('%3c%6c%69%6e%6b%20%72%65%6c%3d%22%73%74%79%6c%65%73%68%
           </li>
 
           <li class="social-item">
-            <a href="https://instagram.com/gitwbb" class="social-link">
+            <a href="https://instagram.com/gitwb_" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
