--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ document.write(unescape('%3c%6c%69%6e%6b%20%72%65%6c%3d%22%73%74%79%6c%65%73%68%
 <li class="contact-item">
 
             <div class="icon-box">
-              <ion-icon name="store"></ion-icon>
+              <ion-icon name="shop"></ion-icon>
             </div>
 
             <div class="contact-info">
