--- a/music-vip.html
+++ b/music-vip.html
@@ -276,7 +276,7 @@ a{
   <meta charset="UTF-8">
   <title>CodePen - A Pen by Chikovani</title>
   <link rel='stylesheet' href='https://cdn.plyr.io/3.6.2/plyr.css'>
-<link rel='stylesheet' href='https://cdn.jsdelivr.net/gh/luxonauta/luxa@1.0/dist/compressed/luxa.css'><link rel="stylesheet" href="./style.css">
+<link rel='stylesheet' href='https://cdn.jsdelivr.net/gh/luxonauta/luxa@1.0/dist/compressed/luxa.css'><link rel="stylesheet" href="./style.s">
 
 </head>
 <body>
