--- a/music-vip.html
+++ b/music-vip.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title></title>
   <link rel='stylesheet' href='https://cdn.plyr.io/3.6.2/plyr.css'>
-<link rel='stylesheet' href='https://cdn.jsdelivr.net/gh/luxonauta/luxa@1.0/dist/compressed/luxa.css'><link rel="stylesheet" href="./style">
+<link rel='stylesheet' href='https://cdn.jsdelivr.net/gh/luxonauta/luxa@1.0/dist/compressed/luxa.css'><link rel="stylesheet" href="styleforvips.css">
 
 </head>
 <body>
