--- a/music-vip.html
+++ b/music-vip.html
@@ -2,6 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title></title>
   <link rel='stylesheet' href='https://cdn.plyr.io/3.6.2/plyr.css'>
 <link rel='stylesheet' href='https://cdn.jsdelivr.net/gh/luxonauta/luxa@1.0/dist/compressed/luxa.css'><link rel="stylesheet" href="styleforvips.css">
