--- a/music-vip.html
+++ b/music-vip.html
@@ -168,6 +168,7 @@ document.addEventListener("DOMContentLoaded", () => {
     });
   });
 });
+</script>
 <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
