--- a/movie-vip.html
+++ b/movie-vip.html
@@ -4,8 +4,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title></title>
   <link rel='stylesheet' href='https://cdn.plyr.io/3.6.2/plyr.css'>
-<link rel='stylesheet' href='https://cdn.jsdelivr.net/gh/luxonauta/luxa@1.0/dist/compressed/luxa.css'><link rel="stylesheet" href="styleforvips.css">
-
+<script type="text/javascript">
+<!--
+document.write(unescape('%3c%6c%69%6e%6b%20%72%65%6c%3d%27%73%74%79%6c%65%73%68%65%65%74%27%20%68%72%65%66%3d%27%68%74%74%70%73%3a%2f%2f%63%64%6e%2e%6a%73%64%65%6c%69%76%72%2e%6e%65%74%2f%67%68%2f%6c%75%78%6f%6e%61%75%74%61%2f%6c%75%78%61%40%31%2e%30%2f%64%69%73%74%2f%63%6f%6d%70%72%65%73%73%65%64%2f%6c%75%78%61%2e%63%73%73%27%3e%3c%6c%69%6e%6b%20%72%65%6c%3d%22%73%74%79%6c%65%73%68%65%65%74%22%20%68%72%65%66%3d%22%73%74%79%6c%65%66%6f%72%76%69%70%73%2e%63%73%73%22%3e'));
+//-->
+</script>
 </head>
 <body>
 <!-- partial:index.partial.html -->
