--- a/fifa-live-n.html
+++ b/fifa-live-n.html
@@ -172,7 +172,7 @@ window.onload=show
   <center "the middle">
   	<iframe width="100%" height="240px" 
 
-SRC="https://elkora.online/albaplayer/ksa1/?serv=1" 
+SRC="https://online.alkoora.live/albaplayer/bein-sports-max-1/?serv=1" 
 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
 gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
@@ -181,7 +181,7 @@ gyroscope; picture-in-picture" allowfullscreen>
 <center>
 <br>
 	<h6>
-		Watch Cameroon vs Serbia live broadcast Gitwb live on 28-11-2022 World Cup 2022
+		Watch  South korea vs Ghana live broadcast Gitwb live on 28-11-2022 World Cup 2022
 
 
 		</h6>
